[Frontend] Fix various minor bugs
- Sizing calculations are redone when the sidebar configuration changes.
- Removed a dead assignment.
- In dark mode, the drawer-mode sidebar has a box-shadow (similar to the
  settings popup).
- Most notably, removed the left margin of the pane-mode sidebar.
- The pane-mode sidebar width is not subject to flexbox shrinking.
- Fixed spacing inside the user list menu in overlay-mode sidebar.

Now, the divider line of the sidebar lies flush to the chat pane's
scrollbar, for a less disturbing visual effect.

--- a/src/static/room-dark.css
+++ b/src/static/room-dark.css
@@ -168,6 +168,9 @@
 .dark .content-wrapper.sidebar-pane .sidebar {
   background: black;
 }
+.dark .content-wrapper.sidebar-drawer .sidebar {
+  box-shadow: 0 0 5px white;
+}
 
 .dark .popups {
   background: rgba(0, 0, 0, 0.5);
